# arad

./: .gitignore  LICENSE  README.md  ci-compose.yml  database  docker-compose.build.yml  docker-compose.ci.yml  docker-compose.yml  local  node-common-sync.sh  production-build-compose.yml  production-compose.yml  sync
.circleci/: config.yml
administrator/: alembic.ini  pyproject.toml
administrator/administrator/: app.py
administrator/tests/: test_administrator.py
api/: Dockerfile
api/etc/nginx/: nginx.conf
be-administrator/: pyproject.toml
be-administrator/administrator/: app.py  orchestrations.py
be-administrator/administrator/datatypes/: request.py  response.py
be-administrator/administrator/repositories/: user.py
be-administrator/administrator/services/: user.py
be-administrator/administrator/types/: request.py  response.py
be-administrator/tests/: test_administrator.py  test_node_administrator.py
be-administrator/tests/administrator/: test_orchestrations.py
be-common/: Dockerfile  mypy.ini  pyproject.toml
be-common/common/: app.py  main.py  repl.py
be-common/common/datatypes/: domain.py  (+2 more)
be-common/database/: __init__.py  models.py
be-common/tests/: test_node_common.py
be-identity/: pyproject.toml
be-identity/database/migrations/versions/: f8bfefd4b530_role.py
be-identity/identity/: app.py  cache.py  mixins.py  orchestrations.py  repl.py
be-identity/identity/datatypes/: domain.py  request.py  response.py
be-identity/identity/repositories/: auth.py  role_assignment.py  user.py
be-identity/identity/services/: auth.py  authentication.py  role.py
be-identity/identity/types/: request.py  response.py
be-identity/tests/: test_identity.py  test_node_identity.py
be-identity/tests/identity/orchestrations/: test_access_token.py  test_login.py  test_logout.py  test_modify_role_assignment.py  test_register.py  test_roles.py
be-identity/tests/identity_tests/orchestration_tests/: test_access_token.py  test_login.py  test_logout.py  test_modify_role_assignment.py  test_register.py  test_roles.py  test_users.py
be-identity/tests/identity_tests/repository_tests/: test_auth.py  test_user.py
be-identity/tests/identity_tests/service_tests/: test_auth.py
be-reader/: pyproject.toml
be-reader/reader/: app.py
be-reader/tests/: test_node_reader.py  test_reader.py
be-reviewer/: pyproject.toml
be-reviewer/reviewer/: app.py  repl.py
be-reviewer/reviewer/services/: authentication.py
be-reviewer/tests/: test_node_reviewer.py  test_reviewer.py
common/common/: app.py  main.py
common/tests/: test_common.py
consul/: agent-policy.hcl  api-policy.hcl  front-end-load-balancer-policy.hcl  load-balancer-policy.hcl  nomad-client-policy.hcl
consul/intention/: reader_service.hcl  user_database.hcl
consul/intentions/: administrator_service.hcl  application_database.hcl  front_end.hcl  identity_service.hcl  reader_service.hcl  reviewer_service.hcl  token_cache.hcl  user_database.hcl
core/: .dockerignore  .pylintrc  Dockerfile  activate  create-database.sh  entrypoint.sh  migrate.sh  pyproject.toml
core/_database/: models.py
core/_database/migrations/: env.py
core/common/: app.py  main.py  repl.py
core/common/datatypes/: domain.py  exception.py
core/common/services/: __init__.py  authorization.py
core/database/: __init__.py  models.py
core/database/migrations/: script.py.mako
core/tests/: test_common.py
core/tests/common_tests/services/: test_authorization.py
documentation/: README.md
documentation/decisions/: 000-template.md  001-line-length.md  001-line_length.md  002-personally-identifying-information.md  003-invalidate-refresh-token.md  004-stack-for-backend-services.md  005-use-comment-table.md  006-isolate-user-data-in-identity.md  007-employ-end-to-end-testing.md  008-read-only-access-for-reader.md  009-default-docker-compose-for-local.md  010-ecc-keys-for-jwt.md  011-hashicorp.md  README.md
documentation/design/: README.md  api.md  deployment.md  domain-data.md  endpoint.md  front-end.md  project.md  service.md
documentation/development/: README.md  howto.md  setup.md
documentation/operation/: README.md  configuration.md  response.md
front-end/: Dockerfile  README.md  cypress.config.ci.ts  cypress.config.ts  package-lock.json  package.json  tsconfig.json
front-end-nginx/: Dockerfile
front-end/src/: App.js  App.tsx  Arad.css  Arad.test.tsx  Arad.tsx  ColorModeSwitcher.tsx  GlobalState.tsx  index.css  index.js  index.tsx  main.tsx  routes.tsx
identity/: alembic.ini  pyproject.toml
identity/database/: __init__.py  models.py
identity/identity/: app.py  cache.py  mixins.py  orchestrations.py  repl.py
infrastructure/api/: Dockerfile
infrastructure/front-end-nginx/: Dockerfile
node-administrator/: pyproject.toml
node-administrator/administrator/: app.py
node-administrator/tests/: test_node_administrator.py
node-common/: Dockerfile  alembic.ini
node-common/common/: main.py
node-common/database/: __init__.py  models.py
node-identity/: pyproject.toml
node-identity/identity/: app.py
node-identity/tests/: test_node_identity.py
node-reader/: pyproject.toml
node-reader/reader/: app.py
node-reader/tests/: test_node_reader.py
node-reviewer/: pyproject.toml
node-reviewer/reviewer/: app.py
nomad/: client.staging.hcl  nomad-cluster-role.json
nomad/arad/: metadata.hcl  variables.hcl
nomad/batch_jobs/: metadata.hcl  variables.hcl
nomad/configurations/: local.hcl  staging.hcl
reader/: pyproject.toml
reader/reader/: app.py
reader/tests/: test_reader.py
redis/: Dockerfile  redis.conf
reviewer/: pyproject.toml
reviewer/reviewer/: app.py
reviewer/tests/: test_reviewer.py
scripts/: database  deploy  drop-database  local  provision-ci-database  provision-database  secrets  staging  sync  test
src/front-end/: Dockerfile  build_types  cypress.config.ci.ts  package-lock.json  package.json  tsconfig.json
src/service/reviewer/: Dockerfile  pyproject.toml
src/service/reviewer/common/: app.py
vault/: default-policy.hcl  kv-policy.hcl  nomad-server-policy.hcl
(+253 files in other folders)
