[tool.poetry]
name = "administrator"
version = "0.1.0"
description = "Administrator Service"
authors = ["Jason Colburne <j.colburne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
toml = "^0.10.2"
asyncpg = "^0.26.0"
sqlmodel = "^0.0.6"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^1.9.1"}
aioredis = "^2.0.1"
fastapi-utils = "^0.2.1"
ipython = "^8.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1"
black = "^22.6.0"

[tool.poetry.scripts]
start = "common.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
