[tool.poetry]
name = "reader"
version = "0.1.0"
description = "Reader node"
authors = ["Jason Colburne <j.colburne@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
toml = "^0.10.2"
asyncpg = "^0.26.0"
sqlmodel = "^0.0.6"
alembic = "^1.8.0"
pydantic = {extras = ["email"], version = "^1.9.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "common.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
