[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "reviewer"
version = "0.1.0"
description = "Reviewer Service"
authors = ["Jason Colburne <j.colburne@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
fastapi = "*"
uvicorn = "*"
gunicorn = "*"
toml = "*"
asyncpg = "*"
sqlmodel = "*"
python-multipart = "*"
python-jose = {extras = ["cryptography"], version = "*"}
pydantic = {extras = ["email"], version = "*"}
ipython = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
black = "*"
pylint = "*"
mypy = "*"
asyncpg-stubs = "*"
pytest-asyncio = "*"
types-PyYAML = "*"
types-toml = "*"
types-ujson = "*"

[tool.poetry.scripts]
start = "common.main:start"
